More swagger experiments
