# personal04/swagger.json
@@ -144,6 +144,13 @@
           }
         }
       }
+    },
+    "/api-docs/": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
     }
   }
 }
